# td3_px4_d430_rosbase

./: .gitignore  README.MD  README_cn.md
simulation_training/diff_planner_overlay/launch/include/: astar_forest_demo.rviz  forest_depth_demo.rviz
simulation_training/diff_planner_overlay/launch/sim/: run_astar_forest_sim.launch  run_td3_forest_depth_demo.launch  run_td3_tsp_forest_demo.launch  run_td3_velocity_sim.launch
simulation_training/diff_planner_overlay/models/: actor_weights.npz
simulation_training/diff_planner_overlay/scripts/: auto_traj_start_trigger.py  clicked_point_goal_bridge.py  depth_cloud_colorizer.py  nav_goal_trigger_bridge.py
simulation_training/training/: export_actor_npz.py  train_td3_velocity_ray.py
src/airborne_bundle/: CMakeLists.txt  package.xml
src/airborne_bundle/launch/: airborne_px4ctrl.launch  airborne_stack.launch  airborne_td3_d430.launch  airborne_td3_tsp_d430.launch  mavros_serial.launch
src/airborne_bundle/models/: model_config.json
src/airborne_bundle/scripts/: td3_tsp_goal_manager.py  td3_velocity_planner.py
src/px4ctrl/: package.xml
src/px4ctrl/config/: ctrl_param_fpv.yaml
src/px4ctrl/launch/: run_ctrl_lio.launch  run_ctrl_vio.launch
src/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  px4ctrl_node.cpp
src/quadrotor_msgs/: CMakeLists.txt  package.xml
src/quadrotor_msgs/msg/: Px4ctrlState.msg
src/uav_utils/: CMakeLists.txt  package.xml
