<?xml version="1.0"?>
<package format="2">
  <name>quadrotor_msgs</name>
  <version>0.0.1</version>
  <description>Minimal quadrotor message set for onboard runtime</description>
  <maintainer email="anonymous@example.com">anonymous</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <export/>
</package>
